examples/st2110/invalid/07_missing_smpte291_ssn.sdp
v=0
o=- 1000 1 IN IP4 192.168.1.1
s=ST2110 Ancillary Bad
t=0 0
m=video 5020 RTP/AVP 96
c=IN IP4 239.100.0.3/64
a=rtpmap:96 smpte291/90000
a=fmtp:96 exactframerate=25; DID_SDID={0x61,0x02}
a=mediaclk:direct=0
a=ts-refclk:ptp=IEEE1588-2008:AA-BB-CC-DD-EE-FF-00-11:0
